// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MongodbInstance "_launchMongod" should throw an error if "mongodProcess.pid" is undefined 1`] = `"{\\"binary\\":\\"/tmp/thisShouldNotExist\\"}"`;

exports[`MongodbInstance prepareCommandArgs should throw an error if no dbpath is provided 1`] = `"\\"instanceOpts.dbPath\\" is required to be set!"`;

exports[`MongodbInstance prepareCommandArgs should throw an error if no port is provided 1`] = `"\\"instanceOpts.port\\" is required to be set!"`;

exports[`MongodbInstance test events checkErrorInLine() should emit "instanceError" when shared libraries fail to load 1`] = `"Instance failed to start because a library is missing or cannot be opened: \\"libcrypto.so.1.1\\""`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown DbPathInUse (Not a directory) 1`] = `
"Instance Failed to start with \\"DBPathInUse\\". Original Error:
Unable to create/open the lock file: /dev/null/mongod.lock (Not a directory). Ensure the user executing mongod is the owner of the lock file and has the appropriate permissions. Also make sure that another mongod instance is not already running on the /dev/null directory, terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown DbPathInUse (already running) 1`] = `
"Instance Failed to start with \\"DBPathInUse\\". Original Error:
Unable to lock the lock file: /tmp/hellodb/mongod.lock (Resource temporarily unavailable). Another mongod instance is already running on the /tmp/hellodb directory, terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown Location28596 1`] = `
"Instance Failed to start with \\"Location28596\\". Original Error:
Unable to determine status of lock file in the data directory /root: boost::filesystem::status: Permission denied: \\"/root/mongod.lock\\", terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when "excepetion in initAndListen" is thrown NonExistentPath 1`] = `
"Instance Failed to start with \\"NonExistentPath\\". Original Error:
Data directory /tmp/hello not found. Create the missing directory or specify another path using (1) the --dbpath command line option, or (2) by adding the 'storage.dbPath' option in the configuration file., terminating"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when curl-open-ssl-3 is not found 1`] = `
"libcurl3 is not available on your system. Mongod requires it and cannot be started without it.
You should manually install libcurl3 or try to use an newer version of MongoDB"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when curl-open-ssl-4 is not found 1`] = `
"libcurl4 is not available on your system. Mongod requires it and cannot be started without it.
You need to manually install libcurl4"
`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when library is missing 1`] = `"Instance failed to start because a library is missing or cannot be opened: \\"libcrypto.so.10\\""`;

exports[`MongodbInstance test events stdoutHandler() should emit "instanceError" when port is already in use 1`] = `"Port \\"1001\\" already in use"`;
